# IYERIS

./: .env.example  .gitignore  .prettierrc  0.3.0 feature list.md  0.4.0 Feature list.md  0.4.1 changes.md  0.5.2 features.md  0.9.0.md  CHANGELOG-0.8.0.md  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  build-setup.md  com.burnttoasters.iyeris.beta.yml  com.burnttoasters.iyeris.desktop  com.burnttoasters.iyeris.metainfo.xml  com.burnttoasters.iyeris.yml  electron-builder.msstore.yml  eslint.config.mjs  index.html  iyeris.sh  licenses.json  main.css  main.js  minimum_requirements.md  package-lock.json  package.json  preload.js  run.md  run.rosie.iyeris.desktop  run.rosie.iyeris.metainfo.xml  run.rosie.iyeris.yml  run.txt  styles.css  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  tsconfig.test.json  vite.config.ts  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release-gate.yml
.husky/: pre-commit
assets/: admin-worker.js  iyeris-beta.icns  iyeris.icns
patches/: @electron+rebuild+4.0.1.patch
scripts/: artifact-signing-tools.ps1  audit-archive-capabilities.ts  check-native-process-policy.js  copy-vendor.js  direct-execution.js  dist-tools.js  ensure-draft-release.cjs  flatpak-bundle.js  generate-cargo-licenses.js  generate-npm-licenses.js  gpg-sign.js  msstore-pack.js  normalize-iconsets.js  open-vs-dev-shell.js  post-release-assets.js  post-release-assets.test.js  release-session.js  release-warning.js  setup-windows-artifact-signing.ps1  sync-version.js  tauri-build.js  test-all.js  update-iyeris-pkg.js  update-metainfo.js  verify-release-draft.cjs  verify-windows-authenticode.ps1  windows-artifact-sign.ps1  zip-macos.js
src/: appState.extended.test.ts  appState.test.ts  appState.ts  archiveFormatCapabilities.ts  archiveManager.extended.test.ts  archiveManager.test.ts  archiveManager.ts  backupManager.extended.test.ts  backupManager.test.ts  backupManager.ts  compressFormatCapabilities.ts  constants.ts  diagnosticsHandlers.extended.test.ts  diagnosticsHandlers.ts  diskSpaceHandler.test.ts  diskSpaceHandler.ts  elevatedOperations.extended.test.ts  elevatedOperations.ts  eventEmitter.test.ts  fileAnalysis.test.ts  fileAnalysis.ts  fileOperations.createFile.test.ts  fileOperations.delete.test.ts  fileOperations.ts  fileTasks.test.ts  fileTasks.ts  fileTypes.real.test.ts  fileTypes.test.ts  fileTypes.ts  folderDir.test.ts  folderDir.ts  fullDiskAccess.ts  gitHandlers.ts  hiddenFileCache.extended.test.ts  hiddenFileCache.test.ts  hiddenFileCache.ts  home.extended.test.ts  home.test.ts  home.ts  homeSettings.sanitize.test.ts  (+182 more)
src-tauri/: Cargo.toml  Info.plist  audit.toml  entitlements.plist  msi-license.rtf  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  main-window.json
src-tauri/msstore-assets/: AppxManifest.xml
src-tauri/src/: archive.rs  directory.rs  elevated.rs  file_operations.rs  fs_utils.rs  indexer.rs  main.rs  native_macos.rs  native_windows.rs  platform.rs  search.rs  settings.rs  system.rs  thumbnails.rs  undo.rs  watcher.rs  window_snap.rs
src/css/: about.css  accessibility.css  archive.css  column-view.css  command-palette.css  context-menu.css  controls.css  explorer.css  file-item.css  file-view.css  home.css  inactive.css  liquid-glass.css  main.css  modals.css  native-swift.css  navigation.css  pdfUI.css  preview-panel.css  progress-panel.css  properties.css  search.css  settings.css  shortcuts.css  sidebar.css  status-bar.css  tabs.css  theme-editor.css  themes.css  toasts.css  toolbar.css  tooltips.css  tour.css  twemoji.css  ui3.css  utility-drawer.css  variables.css  zoom.css
src/locales/: en.ts
src/main/: AdminHandler.ts  appState.ts  archiveManager.ts  archiveSafety.ts  backupManager.ts  diagnosticsHandlers.ts  diskSpaceHandler.ts  (+28 more)
(+226 files in other folders)
