[package]
name = "iyeris"
version = "3.0.1-beta.1"
description = "A beautiful cross-platform file explorer."
authors = ["BurntToasters <code@rosie.run>"]
edition = "2021"

[features]
default = []
mas = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "process", "io-util", "fs"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = { version = "2", features = [] }

notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
walkdir = "2"
sha2 = "0.10"
md-5 = "0.10"
blake3 = "1"
crc32fast = "1"
hex = "0.4"
infer = "0.19"
zip = "2"
tar = "0.4"
flate2 = "1"
sevenz-rust2 = { version = "0.21", features = ["compress", "aes256", "util"] }
xz2 = "0.1"
bzip2 = "0.5"
glob = "0.3"
regex = "1"
shell-words = "1"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
trash = "5"
directories = "6"
fs2 = "0.4"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "user"] }

[lints.rust]
unsafe_code = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
